deploy/sunrey-testnet/k8s/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunrey-testnet-status
  namespace: sunrey-testnet-1
  labels:
    sunrey.monitor: public-status
spec:
  selector:
    app: sunrey-rpc
  ports:
    - name: status
      port: 26657
      targetPort: 26657
